// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing SlateHeader component with props render SlateHeader component  1`] = `
<SlateHeader>
  <div
    className="slate-Title"
  >
    <div
      className="canvas-header"
      id="canvas-header"
    >
      <label
        className="header-label"
      >
        SLATE:
      </label>
      <div
        className="input-text"
      >
        <label
          className="u-hidden"
          htmlFor="txt-input"
        />
        <input
          className="txt-input"
          disabled={true}
          placeholder="title"
          type="text"
        />
      </div>
      <Button
        labelText="P"
        onClick={[Function]}
        type="backward-nav-active"
      >
        <span
          className="btn-element"
          id="backward-nav-active"
          onClick={[Function]}
        >
          <img
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </span>
      </Button>
      <Button
        labelText="P"
        onClick={[Function]}
        type="forward-nav-active"
      >
        <span
          className="btn-element"
          id="forward-nav-active"
          onClick={[Function]}
        >
          <img
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </span>
      </Button>
    </div>
  </div>
</SlateHeader>
`;

exports[`Testing SlateHeader component with props render assessment Slate  1`] = `
<SlateHeader
  slateType="assessment"
>
  <div
    className="slate-Title"
  >
    <div
      className="canvas-header"
      id="canvas-header"
    >
      <label
        className="header-label"
      >
        ASSESSMENT SLATE:
      </label>
      <div
        className="input-text"
      >
        <label
          className="u-hidden"
          htmlFor="txt-input"
        />
        <input
          className="txt-input"
          disabled={true}
          placeholder="title"
          type="text"
        />
      </div>
      <Button
        labelText="P"
        onClick={[Function]}
        type="backward-nav-active"
      >
        <span
          className="btn-element"
          id="backward-nav-active"
          onClick={[Function]}
        >
          <img
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </span>
      </Button>
      <Button
        labelText="P"
        onClick={[Function]}
        type="forward-nav-active"
      >
        <span
          className="btn-element"
          id="forward-nav-active"
          onClick={[Function]}
        >
          <img
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </span>
      </Button>
    </div>
  </div>
</SlateHeader>
`;

exports[`Testing SlateHeader component with props render container-introduction Slate  1`] = `
<SlateHeader
  slateType="container-introduction"
>
  <div
    className="slate-Title"
  >
    <div
      className="canvas-header"
      id="canvas-header"
    >
      <label
        className="header-label"
      >
        INTRODUCTORY SLATE:
      </label>
      <div
        className="input-text"
      >
        <label
          className="u-hidden"
          htmlFor="txt-input"
        />
        <input
          className="txt-input"
          disabled={true}
          placeholder="title"
          type="text"
        />
      </div>
      <Button
        labelText="P"
        onClick={[Function]}
        type="backward-nav-active"
      >
        <span
          className="btn-element"
          id="backward-nav-active"
          onClick={[Function]}
        >
          <img
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </span>
      </Button>
      <Button
        labelText="P"
        onClick={[Function]}
        type="forward-nav-active"
      >
        <span
          className="btn-element"
          id="forward-nav-active"
          onClick={[Function]}
        >
          <img
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </span>
      </Button>
    </div>
  </div>
</SlateHeader>
`;

exports[`Testing SlateHeader component with props render section Slate  1`] = `
<SlateHeader
  slateType="section"
>
  <div
    className="slate-Title"
  >
    <div
      className="canvas-header"
      id="canvas-header"
    >
      <label
        className="header-label"
      >
        SLATE:
      </label>
      <div
        className="input-text"
      >
        <label
          className="u-hidden"
          htmlFor="txt-input"
        />
        <input
          className="txt-input"
          disabled={true}
          placeholder="title"
          type="text"
        />
      </div>
      <Button
        labelText="P"
        onClick={[Function]}
        type="backward-nav-active"
      >
        <span
          className="btn-element"
          id="backward-nav-active"
          onClick={[Function]}
        >
          <img
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </span>
      </Button>
      <Button
        labelText="P"
        onClick={[Function]}
        type="forward-nav-active"
      >
        <span
          className="btn-element"
          id="forward-nav-active"
          onClick={[Function]}
        >
          <img
            src={
              Object {
                "process": [Function],
              }
            }
          />
        </span>
      </Button>
    </div>
  </div>
</SlateHeader>
`;
